--- a/assets/styles/sass/_modules/_banner.scss
+++ b/assets/styles/sass/_modules/_banner.scss
@@ -12,9 +12,31 @@ header.banner:not(.banner-home-slider) {
 			min-height: 281px;
 		}
 	}
-	h1 {
-		color: $white;
+	h1,
+	.h1,
+	h2,
+	.h2
+	h3,
+	.h3,
+	h4,
+	.h4,
+	h5,
+	.h5,
+	h6,
+	.h6,
+	p,
+	.p
+	a {
+		color: $white !important;
 	}
+	
+	a {
+		text-decoration: underline;
+		&:hover {
+			text-decoration: none;
+		}
+	}
+	
 	.left {
 		max-width: 100%;
 	}
