--- a/assets/styles/sass/_modules/_form-campaign.scss
+++ b/assets/styles/sass/_modules/_form-campaign.scss
@@ -33,9 +33,40 @@
 					position: relative;
 					&:after {
 						@include purple-dashed-border;
+						bottom: 0;
 						height: 1px;
 						width: 100%;
 						background-size: 1px 100%, 100% 0px, 1px 100%, 100% 1px;
+					}
+				
+				&.ginput_container_radio,
+				&.ginput_container_checkbox {
+					padding-bottom: 1rem;
+				}
+					
+				}
+				
+				.ginput_container_select {
+					position: relative;
+					&:before {
+						content: '';
+						display: block;
+						width: 20px;
+						height: 14px;
+						margin-top: -0.2rem;
+						background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14.6' height='8.509' viewBox='0 0 14.6 8.509'%3E%3Cpath id='Path_1010' data-name='Path 1010' d='M5.754,0,.052,5.6l5.7,6.176' transform='translate(13.186 1.341) rotate(90)' fill='none' stroke='%233D1E65' stroke-linecap='round' stroke-width='2'/%3E%3C/svg%3E%0A");
+						background-repeat: no-repeat;
+						background-size: 20px;
+						background-position: center;
+						position: absolute;
+						right: 0;
+						top: 50%;
+						transform: translateY(-50%) rotateX(180deg);
+					}
+					select {
+						cursor: pointer;
+						border: 0;
+						background: transparent;
 					}
 				}
 
@@ -46,6 +77,11 @@
 					padding-top: 3.8rem;
 				}
 			}
+			[type=checkbox], [type=file], [type=radio] {
+				margin-bottom: 0;
+			}
 		}
 	}
 }
+
+
