--- a/assets/styles/sass/_global.scss
+++ b/assets/styles/sass/_global.scss
@@ -10,8 +10,25 @@ body#tinymce {
 	height:auto !important;
 }
 
+.screen-reader-text {
+	border: 0;
+	clip: rect(1px,1px,1px,1px);
+	clip-path: inset(50%);
+	height: 1px;
+	margin: -1px;
+	overflow: hidden;
+	padding: 0;
+	position: absolute;
+	width: 1px;
+	word-wrap: normal!important;
+}
+
 .transparent-bg {
 	background-color: transparent;
+}
+
+.relative {
+	position: relative;
 }
 
 .purple-bg,
